Current User reservations tab functionality added.